Fix logo position on mobile

--- a/apps/tomorrow/src/app/core/app-bar/app-bar.component.css
+++ b/apps/tomorrow/src/app/core/app-bar/app-bar.component.css
@@ -3,5 +3,6 @@
 }
 
 .logo {
-  max-height: 28px;
+  height: 24px;
+  width: auto;
 }
